--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       XDG_RUNTIME_DIR: $XDG_RUNTIME_DIR
       ROS_MASTER_URI: http://172.30.21.196:11311
       ROS_IP: 172.30.21.196
+      PYTHONPATH: ./
     working_dir: /YOLO-World
     network_mode: host
     deploy:
@@ -24,7 +25,8 @@ services:
               count: 1
               capabilities: [gpu]
 
-    command: nvidia-smi -l
     #command: ./tools/dist_train.sh configs/pretrain/yolo_world_v2_s_vlpan_bn_2e-3_100e_4x8gpus_obj365v1_goldg_train_1280ft_lvis_minival.py 8 --amp
+    command: python3 demo/image_demo.py configs/pretrain/yolo_world_v2_s_vlpan_bn_2e-3_100e_4x8gpus_obj365v1_goldg_train_lvis_minival.py weights/yolo_world_v2_s_obj365v1_goldg_pretrain-55b943ea.pth data/lvis_val2017/val2017/ 'person,dog,cat' --topk 100 --threshold 0.25 --output-dir out
+    #command: nvidia-smi -l
 
     
